docs: sync CHANGELOG, ROADMAP status log, and resubmission date with post-cascade master
- CHANGELOG.md: roll the 23 Tier B/B.5/C/E/F PRs (#446–#475) into the
  1.0.0-hub release block dated 2026-05-15. The prior 2026-05-12 block
  is preserved unchanged below the new section. The Unreleased section
  remains empty by design — every shipped change is in a dated release
  block.
- docs/ROADMAP.md: flip B2, B3, B5, B6, B.5.1, B.5.2, B.5.3, B.5.4,
  B.5.7, C1, C2, C3, C4, C5, C7, E1, E2, F1, F2, F3, F4, F5, F6 from
  in-progress (or planned for B.5.4) to done. Removes the duplicate
  stale B2/B3 "planned" entries that lingered after the in-progress
  rows landed. Normalises C5 PR reference to the short #462 form.
- docs/plugin-hub-resubmission.md: move the earliest-push date from
  2026-05-19 to 2026-05-22, reflecting the JDK 17 fix that merged on
  2026-05-15 (which reset the quiet-week clock).

Found by clh-pr-reviewer in a whole-branch audit after the multi-PR
cascade merge: the status log was the most visible mismatch with the
shipped state and the CHANGELOG materially under-described the release.